--- a/OpenSourceProject/OpenSourceProject.csproj
+++ b/OpenSourceProject/OpenSourceProject.csproj
@@ -46,6 +46,12 @@
   <ItemGroup>
     <Compile Include="Assignment.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="FormEnterClass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEnterClass.Designer.cs">
+      <DependentUpon>FormEnterClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormEnterCategory.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +67,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchoolClass.cs" />
+    <EmbeddedResource Include="FormEnterClass.resx">
+      <DependentUpon>FormEnterClass.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormEnterCategory.resx">
       <DependentUpon>FormEnterCategory.cs</DependentUpon>
     </EmbeddedResource>
