--- a/OpenSourceProject/OpenSourceProject.csproj
+++ b/OpenSourceProject/OpenSourceProject.csproj
@@ -74,6 +74,12 @@
   <ItemGroup>
     <Compile Include="Assignment.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="FormCalculateGrade.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCalculateGrade.Designer.cs">
+      <DependentUpon>FormCalculateGrade.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormEnterClass.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchoolClass.cs" />
+    <EmbeddedResource Include="FormCalculateGrade.resx">
+      <DependentUpon>FormCalculateGrade.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormEnterClass.resx">
       <DependentUpon>FormEnterClass.cs</DependentUpon>
     </EmbeddedResource>
